classDiagram
class Annonce {
  + id : integer
  titre : string
  createdAt : datetime_immutable
  description : text
  status : string
  ville : string
}

class Message {
  + id : integer
  content : text
  createdAt : datetime_immutable
}

class Reservation {
  + id : integer
  createdAt : datetime_immutable
  statut : string
}

class ContactMessage {
  + id : integer
  nom : string
  email : string
  sujet : string
  message : text
  createdAt : datetime_immutable
}

class Photo {
  + id : integer
  filename : string
  isMain : boolean
}

class Category {
  + id : integer
  name : string
  image : ?string
}

class User {
  + id : integer
  email : string
  username : string
  password : string
  address : string
  phoneNumber : string
  roles : json
  isVerified : boolean
  codePostal : string
  ville : string
}

class Notification {
  + id : integer
  titre : string
  message : text
}

Annonce "*" -- "1" User : user
Annonce "1" -- "*" Reservation : reservations
Annonce "*" -- "1" Category : category
Annonce "1" -- "*" Message : messages
Annonce "1" -- "*" Photo : photos
Message "*" -- "1" User : sender
Message "*" -- "1" User : receiver
Message "*" -- "1" Annonce : annonce
Reservation "*" -- "1" User : user
Reservation "*" -- "1" Annonce : annonce
Photo "*" -- "1" Annonce : annonce
Category "1" -- "*" Annonce : annonces
User "1" -- "*" Annonce : annonces
User "1" -- "*" Reservation : reservations
User "1" -- "*" Message : messagesSent
User "1" -- "*" Message : messagesReceived
User "1" -- "*" Notification : notifications
Notification "*" -- "1" User : user